# OpenMapFileVisualizer

./: .gitattributes  .gitignore  .wsl_build_1910778798.sh  LICENSE  README.md  pyproject.toml
Docs/: chip_config_yaml.md  create_a_issue.md
sample/OpenLibCLI_ESP32/: openlibcli_idf_esp32.map
sample/OpenLibCLI_IAR/: openlibcli_iar_stm32f103rbtx.map
sample/OpenLibCLI_Keil/: openlibcli_keil_stm32f103rbtx.map
sample/OpenLibCLI_Rpi/: openlibcli_picosdk_rp2350.map
sample/OpenLibCLI_STM32CubeIDE/: openlibcli_cubeide_stm32f103rbtx.map
sample/chip_configs/: esp32.yaml  stm32f103.yaml  zynq.yaml
scripts/: launch.bat  launch.sh  launch_wsl.bat  launch_wsl.ps1
scripts/installer/: create_setup.bat  create_setup.sh  create_setup_wsl.bat  create_setup_wsl.ps1  openmapfileanalyzer.spec
scripts/package/: create-package.bat  create-package.sh  create_package_wsl.bat  create_package_wsl.ps1
src/: openmapfileanalyzer.py  version.py
src/analyzer/: __init__.py  chip_info.py  elf_parser.py  models.py  parsing.py  report.py  section_rules.py  stats.py  template.html  utils.py  validation.py
src/analyzer/linker_formats/: __init__.py  base.py  gld.py  gnu.py  iar.py  keil.py
src/analyzer/map_formats/: __init__.py  base.py  gnu.py  iar.py  keil.py  msvc.py  ti.py
src/analyzer/sua_formats/: __init__.py  gcc.py
